fix icks